--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-streamify": "^1.0.2",
     "uglify-js": "^2.5.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "gulp-zip": "^5.1.0"
   }
 }
